slider alignment fix;

--- a/assets/css/modula-cpt.css
+++ b/assets/css/modula-cpt.css
@@ -169,7 +169,7 @@ tr label.th-label {
 	padding: 10px 0;
 	width: 240px;
 	box-sizing: border-box;
-	margin-bottom: 10px;
+	/*margin-bottom: 10px;*/
 	display: flex;
 	display: flex;
 	justify-content: space-between;
